# backend/openapi.json
@@ -1663,6 +1663,57 @@
       }
     },
     "/cost/recurring/{recurring_id}": {
+      "patch": {
+        "tags": [
+          "cost"
+        ],
+        "summary": "Update Recurring",
+        "operationId": "update_recurring_cost_recurring__recurring_id__patch",
+        "parameters": [
+          {
+            "name": "recurring_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid",
+              "title": "Recurring Id"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/RecurringUpdateRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RecurringResponse"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      },
       "delete": {
         "tags": [
           "cost"
@@ -2730,6 +2781,19 @@
           "updated_at"
         ],
         "title": "RecurringResponse"
+      },
+      "RecurringUpdateRequest": {
+        "properties": {
+          "is_active": {
+            "type": "boolean",
+            "title": "Is Active"
+          }
+        },
+        "type": "object",
+        "required": [
+          "is_active"
+        ],
+        "title": "RecurringUpdateRequest"
       },
       "SprintCreateRequest": {
         "properties": {
